[metadata]
name = redsms
version = attr: redsms.__version__

author = Egor Zvorykin
author_email = egzvor@gmail.com
url = https://github.com/redsms/python-redsms

description = Python RedSms API wrapper
keywords = redsms.com api redsms wrappper

license = BSD License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = redsms
setup_requires =
    requests
    typing; python_version < '3.5'
install_requires =
    requests
    typing
